# markov-name-generator

./: .gitignore  README.md  pyproject.toml
data/: geonames_cities.csv
markov_name_generator/: generate_city_name.py  generate_name.py
tests/: test_generate_city_name.py  test_markov_name_generator.py
